# parlance

./: Cargo.toml  README.md
bootstrap-server/: Cargo.toml  README.md
bootstrap-server/src/: main.rs  protocol.rs  registry.rs  server.rs
parlance-client/: Cargo.toml  parlance.toml
parlance-client/src/: lib.rs  main.rs
parlance-client/src/app/: mod.rs
parlance-client/src/core/: config.rs  error.rs
parlance-client/src/network/: bootstrap.rs  discovery.rs  messaging.rs  mod.rs
parlance-client/tests/: bootstrap_integration_test.rs
