[package]
name = "bootstrap-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
